test/regress/coverage-token-parse-errors.test
; Test token.cc parse error paths
; Exercises unexpected(char)
; expected(kind_t)
; operator<<(ostream, kind_t) various branches
; operator<<(ostream, token_t)

; Unclosed parenthesis triggers expected(RPAREN)
; which uses operator<<(ostream, kind_t) for RPAREN
; operator<<(ostream, token_t) default branch -> TOK_EOF
test eval "(5" -> 1
__ERROR__
While parsing value expression:
  (5

Error: Invalid token '<end of input>' (wanted ')')
end test

; Expression with + not followed by argument triggers unexpected()
test eval "5 + +" -> 1
__ERROR__
While parsing value expression:
  5 + +
      ^
Error: + operator not followed by argument
end test
